--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,45 +1,52 @@
-<form #registerForm="ngForm" (ngSubmit)="onSubmit(Password.value, Email.value ,Purpose.value, Website.value, Location.value )">
+<div id="wrapper">
+  <div class="ui container logo">
+    <img class="ui fluid image" src="https://i.imgur.com/wCSg3QZ.png" alt="VoluntApp" />
+  </div>
+  <div class="ui segment login">
 
-  <div class="form-group">
-    <label for="inputEmail">Email</label>
-    <input required type="email" #Email name="Email" ngModel class="form-control" id="inputEmail" 
-   placeholder="Enter email">
-  </div>
+    <div class="ui center aligned container">
+      <h2> <span class="bold text">Înregistrare</span> ONG</h2>
+    </div>
+
+    <form #registerForm="ngForm" (ngSubmit)="onSubmit(Password.value, Email.value ,Purpose.value, Website.value, Location.value )">
+
+      <div class="form-group">
+        <input required type="email" #Email name="Email" ngModel class="form-control" id="inputEmail"
+               placeholder="E-Mail">
+      </div>
 
 
-  <div class="form-group">
-    <label for="inputName">Name</label>
-    <input type="name" #Name name="Name" ngModel class="form-control" id="inputName" 
-placeholder="Enter name">
-  </div>
-  
-  <div class="form-group">
-    <label for="inputPurpose">Purpose</label>
-    <input type="purpose" #Purpose name="Purpose" ngModel class="form-control" id="inputPurpose" 
-    placeholder="Enter purpose">
-  </div>
+      <div class="form-group">
+        <input type="name" #Name name="Name" ngModel class="form-control" id="inputName"
+               placeholder="Care este numele organizației?">
+      </div>
 
-  <div class="form-group">
-    <label for="inputWebsite">Website</label>
-    <input type="website" #Website name="Website" ngModel class="form-control" id="inputWebsite" 
-   placeholder="Enter website">
-  </div>
+      <div class="form-group">
+        <input type="purpose" #Purpose name="Purpose" ngModel class="form-control" id="inputPurpose"
+               placeholder="Care este scopul organizației?">
+      </div>
 
-  <div class="form-group">
-    <label for="inputLocation">Location</label>
-    <input type="location" #Location name="Location" ngModel class="form-control" id="inputLocation" 
-   placeholder="Enter location">
-  </div>
+      <div class="form-group">
+        <input type="website" #Website name="Website" ngModel class="form-control" id="inputWebsite"
+               placeholder="Link la site-ul organizației? (Sau pagină de Facebook)">
+      </div>
 
-  <div class="form-group">
-    <label for="inputPassword">Password</label>
-    <input ngModel #Password  name="Password" type="password" class="form-control" 
-    id="inputPassword" placeholder="Password">
+      <div class="form-group">
+        <input type="location" #Location name="Location" ngModel class="form-control" id="inputLocation"
+               placeholder="Unde se află sediul organizației?">
+      </div>
+
+      <div class="form-group">
+        <input ngModel #Password name="Password" type="password" class="form-control" id="inputPassword"
+               placeholder="Parolă">
+      </div>
+
+      <button [disabled]="!loginForm.valid" type="submit" class="ui fluid yellow button">Înregistrează Organizație</button>
+
+      <div *ngIf="!inputPassword.valid">
+        Parolă incorectă!
+      </div>
+    </form>
   </div>
-  <div class="ui inverted segment">
-  <button [disabled]="!loginForm.valid" type="submit" class="ui inverted blue button">Register</button>
-  </div>
-  <div *ngIf="!inputPassword.valid">
-    Can't fool us</div>
-</form>
+</div>
 
