--- a/src/app/sign-in-volunteer/sign-in-volunteer.component.css
+++ b/src/app/sign-in-volunteer/sign-in-volunteer.component.css
@@ -1,57 +1,77 @@
 #wrapper {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    padding: 0;
-    margin: 0;
-    background: url("https://i.imgur.com/E3j0p9D.jpg");
-    background-size: cover;
-    background-position: center;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  padding: 0;
+  margin: 0;
+  background: url("https://i.imgur.com/E3j0p9D.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+.ui.segment.login {
+  background-color: #1B4485;
+  height: 65%;
+  width: 512px;
+  color: white;
+  margin: 0 auto;
+  border-radius: 16px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+  box-shadow: rgba(128, 128, 128, .4) 0 4px 24px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.form-group {
+  margin-bottom: 12px;
+}
+
+.form-control {
+  height: 48px;
+  border-radius: 5px;
+  background-color: rgba(255,255,255,.4);
+  border: 0;
+  transition: all .2s ease-out 0s;
+} .form-control:focus {
+    background-color: #ffffff;
   }
-  
-  .ui.segment.login {
-    background-color: #1B4485;
-    height: 40%;
-    width: 512px;
+  .form-control::placeholder {
     color: white;
-    margin: 0 auto;
-    border-radius: 16px;
-    border-bottom-left-radius: 0px;
-    border-bottom-right-radius: 0px;
-    box-shadow: rgba(128, 128, 128, .4) 0 4px 24px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
   }
-  
-  .ui.left.aligned.container {
-    padding: 0;
-  }
-  
-  .ui.left.aligned.container {
-    margin-bottom: 1em;
-  }
-  
-  .bold.text {
-    font-weight: bold;
-  }
-  
-  .ui.right.aligned.container.login {
-    padding: 0;
-  }
-  
-  .ui.yellow.button {
-    display: inline-block;
-  }
-  
-  .ui.container.logo {
-    width: 512px;
-    position: absolute;
-    top: 30%;
-    left: 0; right: 0;
-  }
-  
-  .fluid.ui.button {
-    margin-bottom: 12px;
-  }
+
+.ui.center.aligned.container {
+  padding: 0;
+  margin-bottom: 32px;
+}
+
+.ui.left.aligned.container {
+  margin-bottom: 1em;
+}
+
+.bold.text {
+  font-weight: bold;
+}
+
+.ui.right.aligned.container.login {
+  padding: 0;
+}
+
+.ui.yellow.button {
+  display: inline-block;
+}
+
+.ui.container.logo {
+  width: 512px;
+  position: absolute;
+  top: 10%;
+  left: 0;
+  right: 0;
+}
+
+.fluid.ui.button {
+  height: 48px;
+  margin-bottom: 12px;
+}
